Redid index page with display:flex, fixed alignment issues and nav bar. got most of the new page done besides closeing thoughts

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -1,66 +1,172 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+*{
+	box-sizing: border-box;
 	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+	padding:0;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+.container{
+	max-width: 80%;
+	margin: 0 auto;
+	padding: 30px 0;
 }
 
-/* Set every element's box-sizing to border-box */
-* {
-    box-sizing: border-box;
+nav{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 75px;
+	max-width: 100%;
+}
+nav a {
+	text-decoration: none;
+	color: grey;
+}
+nav a:hover{
+	color: blue;
+}
+/* IF THINGS BREAK IT IS BETWEEN HERE AND SERVICES */
+.header{
+	display:flex;
+	justify-content: space-evenly;
+	align-items: center;
+	max-width: 100%;
+}
+.headerText{
+	text-align: center;
+	max-width: 48%;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+.button{
+	width: 150px;
+	height:35px;
+	border:2px solid black;
+	margin:0 auto;
+	padding-top: 5px;
+}
+.button:hover{
+	color:white;
+	background-color:black;
+	border:2px solid grey;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+.headerText h1 {
+	font-size:70px;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.topContent {
+	display: flex;
+	justify-content: space-between;
+	margin: 45px 0;
+	border-top: 2px solid black;
+	padding-top: 45px;
+}
+.topContent h2{
+	padding-bottom: 15px;
+}
+.bottomContent{
+	display: flex;
+	justify-content: space-between;
+	margin: 45px 0;
+	border-bottom: 2px solid black;
+	padding-bottom: 45px;
+}
+.bottomContent .box{
+	margin:0 10px;
+}
+.bottomContent h2{
+	padding-bottom: 15px;
+}
+.contact h2{
+	margin: 25px 0;
+}
+.contact .number{
+	margin: 20px 0;
+}
+/* SERVICES PAGE */
+.serviceHeaderImg {
+	display: flex;
+	justify-content: center;
+}
+.service{
+	height:150px;
+	border-bottom: 2px solid black;
+}
+.service h1{
+	margin: 25px 0;
+}
+/* MAIN CONTENT STARTS HEAR */
+.serviceBox{
+	width: 48%;
+	border: 2px solid black;
+	padding:15px;
+	background-color: lightgray;
+}
+.serviceBox p{
+	margin: 10px 0;
+}
+.serviceBox h2{
+	margin-bottom: 25px;
+}
+.learnMoreButton{ /*NEEDS WORK */
+	margin: 7px;
+	height: 30px;
+	width: 40%;
+	background-color: white;
+	text-align: center;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	border-color: 2px solid black;
+}
+.learnMoreButton:hover{
+	color:white;
+	background-color:darkgrey;
+	border-color: 2px solid white;
+}
+.learnMoreButton a{
+	text-decoration: none;
+	color:black;
+}
+.learnMoreButton a:hover{
+	color:white;
+}
+.mainContentTop{
+	display:flex;
+	justify-content: space-between;
+	margin:40px 0;
+}
+.mainContentMid{
+	display:flex;
+	justify-content: space-between;
+	margin:40px 0;
+}
+.mainContentBot{
+	display:flex;
+	justify-content: space-between;
+	margin:40px 0;
+} 
+/* CLOSING CONTENTS */
+.closingThought {
+	display: flex;
+	justify-content: space-between;
+	
+	
+}
+.service-info-img{
+	width:40%
+}
+.someFactsBox{
+	width:40%;
+	padding: 15px;
+}
+.someFactsBox h3{
+	margin-bottom: 25px;
+}
+.someFactsBox p{
+	margin:10px;
+}
+.serviceFooter {
+	margin-top: 50px;
+	display: flex;
+	justify-content: center;
+}
+
